Added CSS styling/ready for deployment

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="container">
         <div style="margin-top: 80px;" class="jumbotron text-center">
-            <h1 class="display-4">Reminders <span role="img" aria-label="Memo">📝</span></h1>
+            <h1 class="display-4">Reminders <img src="./assets/iconmonstr-note-20-240.png" height="60rem" width="60rem"></h1>
             <h4 class="mt-4">Don't forget to take note! </h4>
             <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Click to Start</a>
         </div>
