Allows user to edit existing notes through form input

--- a/public/notes.html
+++ b/public/notes.html
@@ -28,6 +28,7 @@
                         <div class="form-group">
                             <textarea class="form-control note-textarea" placeholder="Enter Note Text"
                                 rows="3"></textarea>
+                                <p style="margin-top: 1rem;">**To edit a note, type in your changes and press the appropriate <b>edit</b> button which corresponds to the desired note!</p>
                             <button class="btn btn-success mt-4 float-right save-note">Save Note</button>
                         </div>
                     </div>
